"hover videos and external json data"

--- a/project.html
+++ b/project.html
@@ -1,3 +1,14 @@
-<h3 class="content-subhead">{{project.title}}</h3>
-<p>{{project.description}}</p>
-<p>{{project.tech}}</p>
+<ul>
+	<h3 class="content-subhead">{{project.title}}</h3>
+	<div ng-if="project.videoUrl">
+ 		<div id="videosList">           
+			<div class="video">
+    			<video loop onmouseout="this.pause()" onmouseover="this.play()">
+      				<source src="{{project.videoUrl | trustUrl}}" type="video/mp4">
+    			</video>
+  			</div>
+		</div>
+	</div>
+	<li>{{project.description}}</li>
+	<li>{{project.tech}}</li>
+</ul>
