--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta name="description" content="Mike Sayan's Personal Website">
 	<title>Mike Sayan</title>
 
+	<script   src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
+	<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
+
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
@@ -15,6 +18,7 @@
 
 	<script src="./js/app.js"></script>
 	<script src="./js/controller.js"></script>
+	<script src="./js/videofilter.js"></script>
 	<script src="./js/project-directive.js"></script>
 	<script src="./js/work-directive.js"></script>
 
@@ -32,7 +36,6 @@
 	<div class="splash-container">
 	    <div class="splash">
 	    	<img class="img-circle" src="./img/me.jpg">
-	        <h1 class="splash-head">{{bio.title}}</h1>
 	        <p class="splash-subhead">
 	            {{bio.paragraph}}
 	        </p>
@@ -53,7 +56,7 @@
 	    <div class="content">
 	        <h2 class="content-head is-center">Experience</h2>
 	        <div class="pure-g">
-	        	<div ng-repeat="work in works" class="pure-u-1-2">
+	        	<div ng-repeat="job in jobs" class="pure-u-1-2">
 		        	<work></work>
 		        </div>
 	        </div>
