--- a/work.html
+++ b/work.html
@@ -1,4 +1,4 @@
-<h3 class="content-subhead">{{work.title}}</h3>
-<h4>{{work.occupation}}</h4>
-<h5>{{work.duration}}</h5>
-<p>{{work.description}}</p>
+<h3 class="content-subhead">{{job.title}}</h3>
+<h4>{{job.occupation}}</h4>
+<h5>{{job.duration}}</h5>
+<p>{{job.description}}</p>
