--- a/project.html
+++ b/project.html
@@ -1,5 +1,6 @@
 <ul>
 	<h3 class="content-subhead">{{project.title}}</h3>
+	<h4>{{project.description}}</h4>
 	<div ng-if="project.videoUrl">
  		<div id="videosList">           
 			<div class="video">
@@ -9,6 +10,5 @@
   			</div>
 		</div>
 	</div>
-	<li>{{project.description}}</li>
 	<li>{{project.tech}}</li>
 </ul>
