--- a/index.html
+++ b/index.html
@@ -23,16 +23,24 @@
 	<script src="./js/work-directive.js"></script>
 
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/positioning.css">
 </head>
 
 <body ng-controller="appController">
 
 	<div class="header">
 	    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-	        <a class="pure-menu-heading" href="">Mike Sayan</a>
+	        <a class="pure-menu-heading" href="#home">Mike Sayan</a>
+
+	        <ul class="pure-menu-list">
+            	<li class="pure-menu-item"><a href="#education" class="pure-menu-link">Education</a></li>
+            	<li class="pure-menu-item"><a href="#experience" class="pure-menu-link">Experience</a></li>
+            	<li class="pure-menu-item"><a href="#projects" class="pure-menu-link">Projects</a></li>
+            	<li class="pure-menu-item"><a href="#contact" class="pure-menu-link">Contact</a></li>
+        	</ul>
 	    </div>
 	</div>
-
+	<a class="anchor" name="home"></a>
 	<div class="splash-container">
 	    <div class="splash">
 	    	<img class="img-circle" src="./img/me.jpg">
@@ -45,10 +53,11 @@
 
 	<div class="content-wrapper">
 	    <div class="content is-center">
+	    	<a class="anchor" name="education"></a>
 	        <h2 class="content-head">Education</h2>
 	        <div class="pure-g">
 		        <div class="pure-u-1-1">
-			        <h3>{{edu.title}}</h3>
+			        <h3 class="content-subhead">{{edu.title}}</h3>
 			        <h4>{{edu.graduation}}</h4>
 			       	<h4>{{edu.gpa}}</h4>
 			        <h4>{{edu.deans}}</h4>
@@ -58,9 +67,8 @@
 			        </li>
 			    </div>
 	        </div>
-
-	        <hr/>
-
+		<br><hr/><br>
+	    	<a class="anchor" name="experience"></a>
 	        <h2 class="content-head">Experience</h2>
 	        <div class="pure-g">
 		        <div>
@@ -69,9 +77,8 @@
 			        </div>
 			    </div>
 	        </div>
-
-	        <hr/>
-
+		<br><hr/><br>
+	        <a class="anchor" name="projects"></a>
 	        <h2 class="content-head">Projects</h2>
 	        <h6 class="content-head">Hover over for Video</h6>
 	        <div class="pure-g">
@@ -79,9 +86,7 @@
 		        	<project></project>
 		        </div>
 	        </div>
-
-	        <hr/>
-
+		<br><hr/><br>
 	        <h2 class="content-head">CSE 300</h2>
 	        <div class="pure-g">
 		        <ul class="pure-u-1-2">
@@ -99,11 +104,10 @@
 	        <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
 	        </div>
 	        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+	        	<a class="anchor" name="contact"></a>
 	            <h2 class="content-head content-head-ribbon">Contact me</h2>
 	            <p>Email: {{contact.email}}</p>
 	            <p>Tel: {{contact.telephone}}</p>
-	            <br><br>
-	            <p>Created by Mike Sayan using PureCSS and Angular JS</p>
 	        </div>
 	    </div>
 	</div>
