"changed projects dir a bit and page no longer centers text"

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</div>
 
 	<div class="content-wrapper">
-	    <div class="content is-center">
+	    <div class="content">
 	    	<a class="anchor" name="education"></a>
 	        <h2 class="content-head">Education</h2>
 	        <div class="pure-g">
@@ -90,7 +90,7 @@
 	    </div>
 
 	    <div class="ribbon l-box-lrg pure-g">
-	        <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
+	        <div class="l-box-lrg pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
 	        </div>
 	        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 	        	<a class="anchor" name="contact"></a>
