--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 	<a class="anchor" name="home"></a>
 	<div class="splash-container">
 	    <div class="splash">
-	    	<img class="img-circle" src="./img/me.jpg">
+	   		<div class="is-center">
+	    		<img class="img-circle" src="./img/me.jpg">
+	    	</div>
 	    	<h2 id="bioTitle">{{bio.title}}</h2>
 	        <p class="splash-subhead">
 	            {{bio.paragraph}}
@@ -52,9 +54,9 @@
 	</div>
 
 	<div class="content-wrapper">
-	    <div class="content">
+	    <div class="content is-center">
 	    	<a class="anchor" name="education"></a>
-	        <h2 class="content-head">Education</h2>
+	        <h2 class="content-head is-center">Education</h2>
 	        <div class="pure-g">
 		        <div class="pure-u-1-1">
 			        <h3 class="content-subhead">{{edu.title}}</h3>
@@ -69,7 +71,7 @@
 	        </div>
 		<br><hr/><br>
 	    	<a class="anchor" name="experience"></a>
-	        <h2 class="content-head">Experience</h2>
+	        <h2 class="content-head is-center">Experience</h2>
 	        <div class="pure-g">
 		        <div>
 		        	<div ng-repeat="job in jobs" class="pure-u-1-2">
@@ -79,8 +81,8 @@
 	        </div>
 		<br><hr/><br>
 	        <a class="anchor" name="projects"></a>
-	        <h2 class="content-head">Projects</h2>
-	        <h6 class="content-head">Hover over for Video</h6>
+	        <h2 class="content-head is-center">Projects</h2>
+	        <h6 class="content-head is-center">Hover over for Video</h6>
 	        <div class="pure-g">
 	        	<div ng-repeat="project in projects" class="pure-u-1-2">
 		        	<project></project>
@@ -95,8 +97,8 @@
 	        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 	        	<a class="anchor" name="contact"></a>
 	            <h2 class="content-head content-head-ribbon">Contact me</h2>
-	            <p>Email: {{contact.email}}</p>
-	            <p>Tel: {{contact.telephone}}</p>
+	            <p>Email: <a href="mailto:{{contact.email}}">{{contact.email}}</a> </p>
+	            <p>Tel: <a href="tel:+{{contact.telephone}}">{{contact.telephone}}</a></p>
 	        </div>
 	    </div>
 	</div>
