--- a/project.html
+++ b/project.html
@@ -4,9 +4,8 @@
 	<div ng-if="project.videoUrl">
  		<div id="videosList">           
 			<div class="video">
-    			<video loop onmouseout="this.pause()" onmouseover="this.play()">
+    			<video loop onmouseout="this.pause()" onmouseover="this.play()" poster="{{project.pictureUrl}}">
       				<source src="{{project.videoUrl | trustUrl}}" type="video/mp4">
-      				<img src="{{project.pictureUrl}}">
     			</video>
   			</div>
 		</div>
