"added images and resume"

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="./css/layouts/marketing.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+	<script src="http://static.videogular.com/scripts/videogular/latest/videogular.js"></script>
 
 	<script src="./js/app.js"></script>
 	<script src="./js/controller.js"></script>
@@ -44,7 +45,8 @@
 	<div class="splash-container">
 	    <div class="splash">
 	   		<div class="is-center">
-	    		<img class="img-circle" src="./img/me.jpg">
+	    		<img class="img-circle" src="./img/me.jpg"><br><br>
+	    		<a href="./resume.pdf">Resume</a>
 	    	</div>
 	    	<h2 id="bioTitle">{{bio.title}}</h2>
 	        <p class="splash-subhead">
